2005-08-26  Kornél Pál  <kornelpal@hotmail.com>

	* AssemblyInfo.cs: Using Consts.MonoVersion instead of MonoVersion.cs.
	* ilasm.exe.sources: Using Consts.MonoVersion instead of MonoVersion.cs.

2005-08-05  Ankit Jain  <jankit@novell.com>

	* ilasm.exe.sources: Add DeclSecurity.cs to the build.

2005-05-12  Ankit Jain  <ankit@corewars.org>

	* Makefile (LOCAL_MCS_FLAGS): Use the in-tree PEAPI.dll as its public
	interface has changed a bit, so avoid clash with older installed
	dll.

2005-04-21  Raja R Harinath  <rharinath@novell.com>

	* Makefile (PROGRAM): Make profile-specific.

2004-12-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Driver.cs: Added support for /key option to strongname assemblies
	produced by ilasm. Fix bug #69721.
	* Makefile: Added dependency on Mono.Security.dll assembly to provide
	strongnaming support.

2004-12-02  Miguel de Icaza  <miguel@ximian.com>

	* CodeGen.cs: Correctly compute the name of a nested class,
	currently it was ignoring anything above level 1.

2004-07-27  Jackson Harper  <jackson@ximian.com>

	* Driver.cs: Make debug switch compatible with MS's add debug to
	the usage.

2004-07-27  Martin Baulig  <martin@ximian.com>

	Added debugging support to ilasm :-)

	* Makefile: Depend on Mono.CSharp.Debugger.dll (this is only
	exposed in DebuggingInfo.cs, so we can easily change that).

	* Driver.cs: Added --debug command line argument to create
	debugging info; this'll create a .mdb symbol file.

2004-06-26  Jackson Harper  <jackson@ximian.com>

	* Report.cs: Fix quiet.
	
2004-06-24  Jackson Harper  <jackson@ximian.com>

	* Report.cs: Add new mehtod for displaying messages.
	
2004-06-23  Jackson Harper  <jackson@ximian.com>

	* Driver.cs: Use the same success message as MS.
	
2004-06-19  Jackson Harper  <jackson@ximian.com>

	* ilasm.exe.sources: Add MethodPointerTypeRef.cs to the build.
	
2004-06-14  Jackson Harper  <jackson@ximian.com>

	* ilasm.exe.sources: Add FileRef.cs
	
2004-06-10  Jackson Harper  <jackson@ximian.com>
